k8s-apps/redis_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-data-reactive-redis
  namespace: spring-services
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: spring-data-reactive-redis
          image: aksintegrations01.azurecr.io/spring-data-reactive-redis:0.0.3-SNAPSHOT
          ports:
            - containerPort: 8761
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.azure.com/agentpool
                    operator: In
                    values:
                      - userpool01
