k8s-apps/redis_cip.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: spring-services
  labels:
    app: redis
spec:
  ports:
    - port: 8761
      targetPort: 8761
      protocol: TCP
  selector:
    app: redis
