k8s-apps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffee
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
#  tls:
#    - hosts:
#        - cafe.example.com
#      secretName: cafe-secret
  rules:
    - host: aks.jshah.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cosmos-svc
                port:
                  number: 8760
